--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -744,7 +744,8 @@ span.field-label {
   
 }
 
-.page-node-25{
+/*.page-node-25 {*/
+.page-things-we-like {
    #main{
      background: rgba(83,50,128,0.2);
      
@@ -784,7 +785,7 @@ span.field-label {
      }
      
    }
-   .things_menu ul{
+   .things-we-like-menu ul{
       float: right;
       background: url("../images/things_menu.jpg") repeat-x top left rgba(83,50,128,0.2);
       padding-top: 8px;
