--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -745,7 +745,7 @@ span.field-label {
 }
 
 /*.page-node-25 {*/
-.page-things-we-like {
+.page-things-we-like, .page-services {
    #main{
      background: rgba(83,50,128,0.2);
      
@@ -795,7 +795,7 @@ span.field-label {
      }
      
    }
-   .things-we-like-menu ul{
+   .things-we-like-menu ul, .services-menu ul {
       float: right;
       background: url("../images/things_menu.jpg") repeat-x top left rgba(83,50,128,0.2);
       padding-top: 8px;
