links home menu

--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -287,6 +287,11 @@ span.field-label {
 /*HOME PAGE*/
 .front {
 
+  .home-menu-link {
+    color: inherit;
+    text-decoration: none;
+  }
+
   #footer {
     float: left;
     width: 100%;
