--- a/source/sites/all/themes/custom/sass/_base.scss
+++ b/source/sites/all/themes/custom/sass/_base.scss
@@ -84,7 +84,7 @@ $font-monospace:   $courier;
 //
 $grisOscuro : #8A8480;
 $grisOscuroOpacity: rgba(138,132,128,0.2);
-$grisClaro : #ADAAA6;
+$grisClaro : rgba(218,215,214,1);
 $grisTextoMenu: #5F5952;
 $grisTexto : #5F5952;
 $verdeOscuro: #226772;
