fuente jenna_sueregular

--- a/source/sites/all/themes/custom/css/pages.css
+++ b/source/sites/all/themes/custom/css/pages.css
@@ -451,7 +451,7 @@ span.field-label {
   padding: 16px 12px;
   margin-bottom: 10px;
   font-size: 18px;
-  font-family: jennaSue;
+  font-family: jenna_sueregular;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/pages\.scss}line{font-family:\00003353}}
 .front #main #content > ul > li .cursive a {
@@ -903,7 +903,7 @@ span.field-label {
   text-decoration: none;
   color: #fff;
   font-size: 21px;
-  font-family: jennaSue;
+  font-family: jenna_sueregular;
   text-align: center;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/pages\.scss}line{font-family:\00003820}}
