--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -274,6 +274,11 @@ span.field-label {
 
 #footer {
   margin-top: 12px;
+  
+  a{
+    color: $grisClaroTexto;
+    text-decoration: none;
+  }
 }
 
 /*
@@ -301,19 +306,19 @@ span.field-label {
   background: url(../images/bg.jpg);
   background-size: 100%;
   #page {
-    max-width: 1000px;
+    max-width: 100%;
     position: relative;
     padding-bottom: 80px;
   }
   padding-top: 83px;
   #header {
     float: left;
-    width: 193px;
+    width: 20%;
   }
 
   #main {
     float: left;
-    width: 804px;
+    width: 80%;
 
     li {
       list-style-type: none;
@@ -342,6 +347,13 @@ span.field-label {
         }
         .text-box {
           margin-bottom: 10px;
+          
+          transition: all 0.4s ease-in-out;
+          -webkit-transition: all 0.4s ease-in-out;
+          -moz-transition: all 0.4s ease-in-out;
+        }
+        .text-box:hover {
+          opacity: 0.8;
         }
         .cursive {
           background: $grisOscuroOpacity;
@@ -370,7 +382,7 @@ span.field-label {
       }
 
       .phrase {
-        width: 145px;
+        width: 20%;
         color: $azul;
         text-align: center;
         font-size: 20px;
@@ -380,7 +392,7 @@ span.field-label {
       }
 
       .story {
-        width: 110px;
+        width: 15%;
 
         > a {
           border-color: $azul;
@@ -398,7 +410,7 @@ span.field-label {
       }
 
       .help {
-        width: 155px;
+        width: 17%;
 
         .text-box {
           padding: 15px 17px;
@@ -412,7 +424,7 @@ span.field-label {
       }
 
       .contact {
-        width: 75px;
+        width: 11%;
 
         > a {
           border-color: $naranjaOscuro;
@@ -430,7 +442,7 @@ span.field-label {
       }
 
       .like {
-        width: 182px;
+        width: 22%;
 
         > a {
           border-color: $violeta;
@@ -448,7 +460,7 @@ span.field-label {
       }
 
       .faq {
-        width: 50px;
+        width: 9%;
         margin-right: 0;
 
         > a {
@@ -468,9 +480,9 @@ span.field-label {
 
     }
     .map {
+      left: 52%;
       position: absolute;
-      right: 268px;
-      top: 416px;
+      top: 395px;
     }
 
     .pictures {
@@ -529,7 +541,7 @@ span.field-label {
       .column-2 {
         float: right;
         width: 46%;
-
+        color: $azul;
       }
 
     }
@@ -613,6 +625,11 @@ span.field-label {
       float: left;
       margin-right: 25px;
       min-height: 370px;
+      
+      a{
+        text-decoration: none;
+        color: $grisClaroTexto;
+      }
     }
     .col-1 {
       width: 30%;
@@ -800,9 +817,9 @@ span.field-label {
   }
   .things-we-like-menu ul, .services-menu ul {
     float: right;
-    background: url("../images/things_menu.jpg") repeat-x top left rgba(83, 50, 128, 0.2);
-    padding-top: 8px;
+    background: rgba(83, 50, 128, 0.2);
     padding-left: 0;
+    margin-top: 0;
 
     li {
       list-style-type: none;
@@ -837,6 +854,11 @@ span.field-label {
     background: $grisClaro;
     padding: 27px 64px;
     margin-bottom: 8px;
+    
+    a{
+      color: $azul;
+      text-decoration: none;
+    }
 
     > div {
       display: inline-block;
@@ -858,6 +880,11 @@ span.field-label {
       float: left;
       width: 20%;
       margin-right: 10%;
+      
+      a{
+        color: $azul;
+        text-decoration: none;
+      }
 
       .views-field-field-image {
         text-align: center;
